--- a/Doku_Sysadmin.tex
+++ b/Doku_Sysadmin.tex
@@ -138,8 +138,8 @@ auf die Ablösung eines Laptops durch den kleineren und leichteren Raspberry Pi 
 Der Raspberry Pi ist ein kreditkartengroßer Einplatinencomputer, der von der Raspberry Pi Foundation entwickelt wurde.
 Wir benutzen für dieses Projekt das leistungsstärkere Modell B.
 %Zitate für die techn. Details?
+\parbox{8cm}{
 Technische Details:
-
 \begin{itemize}
 \item Preis: ca. 35 Euro
 \item Prozessor: ARM1176JZF-S (700 MHz)
@@ -148,6 +148,13 @@ Technische Details:
 \item Bis zu 16 GPIO-Pins
 \item USB-Anschlüsse: 2
 \item FBAS, HDMI
+\end{itemize}
+}
+\hfill
+\parbox{5cm}{
+\includegraphics[width=5cm]{Raspi.jpg}
+}
+\begin{itemize}
 \item 3,5-mm-Klinkenstecker (analog), HDMI (digital)
 \item Kartenleser für SD (SDHC und SDXC)/MMC/SDIO
 \item 10/100-MBit-Ethernet-Controller 
@@ -155,8 +162,7 @@ Technische Details:
 \item 5-V-Micro-USB-Anschluss (Micro-B), alternativ 4 x AA-Batterien
 \end{itemize}
 
-Für den Anschluss an einen Bildschirm benutzen den HDMI Ausgang.
-Diesen benutzen wir für Kontrollausgaben und Tests.
+Für Test und Kontrollausgaben benutzen wir einen am HDMI-Ausgang angeschlossenen Monitor.
 
 Als Stromquelle steht ein Akkupack ......(Firma,Modell) zum Einsatz. 
 Hierbei ist wichtig, dass der Raspberry mind. 700 mA, besser 1 A zur Stromversorgung bekommt. 
