--- a/Doku_Sysadmin.tex
+++ b/Doku_Sysadmin.tex
@@ -332,20 +332,26 @@ Wlan -> Teilproblem
 1 Seite
 \subsection{Zusammenfassung}
 
-hohe Anforderungen für knappen Zeitraum
-interessantes, anspruchsvolles Projekt
-viel über Linux und Ros gelernt
-Hardware- und Netzwerkkonfiguration interessant
+Das Projekt ist durch die hohen Anforderungen und den knappen Zeitraum sehr Zeitintensiv. Allerdings war es auch sehr interessant. Wir haben viel über Linux und ROS gelernt und uns mit Hardware- und Netzwerkkonfiguration außeinander gesetzt.
 
-\section{Ausblick}
+%hohe Anforderungen für knappen Zeitraum
+%interessantes, anspruchsvolles Projekt           
+%viel über Linux und Ros gelernt
+%Hardware- und Netzwerkkonfiguration interessant
 
-Benutzung des Pi's als Hardware Nodes Lab
-Benutzung des Pi's für kleine Roboterprojekte Lab
-Immer mehr binary packages für ROS Pi verfügbar -> mehr Möglichkeiten
-z.B.: GPIO Interface -> Knöpfe Kaffemaschine, Relays, alle möglichen Signale
-auf Hardwareebene
+\subsection{Ausblick}
 
-\section{Eigene Leistung}
+In Zukunft kann der Raspberry Pi durch die Tatsache, dass wir ROS benutzt haben, vielseitig im Robotiklabor verwendet werden. Zum Beispiel bei Projekten, die wenig Spielraum bei Größe und Energieverbrauch zulassen.
+Durch die Tatsache, dass ROS immer mehr an Beliebtheit gewinnt, nimmt auch die Anzahl an binary-packages und Ausarbeitungen zu. Dies eröffnet wiederum mehr Einsatzmöglichkeiten.
+Zum Beispiel kann man durch das GPIO-Interface viele Hardwarekomponenten(wie die Bedienoberfläche einer Kaffeemaschine, Lichtschalter, etc.) steuern.  
+
+%Benutzung des Pi's als Hardware Nodes Lab
+%Benutzung des Pi's für kleine Roboterprojekte Lab
+%Immer mehr binary packages für ROS Pi verfügbar -> mehr Möglichkeiten
+%z.B.: GPIO Interface -> Knöpfe Kaffemaschine, Relays, alle möglichen Signale
+%auf Hardwareebene
+
+\subsection{Eigene Leistung}
 
 Durch unser Projekt wird der Laptop am ''Volksbot'' durch einen viel kleineren und leichteren Raspberry Pi ersetzt. Da wir mit ROS arbeiten, kann der Pi mit nur wenig Aufwand auch an anderen Robotern eingesetzt werden.
 
