--- a/Doku_Sysadmin.tex
+++ b/Doku_Sysadmin.tex
@@ -343,7 +343,7 @@ Das Projekt ist durch die hohen Anforderungen und den knappen Zeitraum sehr Zeit
 
 In Zukunft kann der Raspberry Pi durch die Tatsache, dass wir ROS benutzt haben, vielseitig im Robotiklabor verwendet werden. Zum Beispiel bei Projekten, die wenig Spielraum bei Größe und Energieverbrauch zulassen.
 Durch die Tatsache, dass ROS immer mehr an Beliebtheit gewinnt, nimmt auch die Anzahl an binary-packages und Ausarbeitungen zu. Dies eröffnet wiederum mehr Einsatzmöglichkeiten.
-Zum Beispiel kann man durch das GPIO-Interface viele Hardwarekomponenten(wie die Bedienoberfläche einer Kaffeemaschine, Lichtschalter, etc.) steuern.  
+Zum Beispiel kann man nicht nur Roboter, sondern durch das GPIO-Interface auch viele andere Hardwarekomponenten(wie die Bedienoberfläche einer Kaffeemaschine, Lichtschalter, etc.) steuern.  
 
 %Benutzung des Pi's als Hardware Nodes Lab
 %Benutzung des Pi's für kleine Roboterprojekte Lab
